fix stars align

--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,5 @@
+@import './stars.css';
+
 body {
   margin: 0;
 }
@@ -5,9 +7,4 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-
-  justify-content: space-between;
-
-  height: 116px;
-  width: 96px;
 }
